--- a/css/style.css
+++ b/css/style.css
@@ -1,73 +1,137 @@
 /* Basic Layout */
+body {
+	margin: 0;
+}
 div { 
-/*        border: 1px solid #000; */ 
-        background: #ccc;
-        min-height: 80px;
-        float: left;
+  float: left;
 }
-#header, #nav, #footer {
-        width: 100%;
+#header, #nav{
+  width: 100%;
 }
-#logo {
-        width: 40%;
-        background: #852223;
-        color: #FFF;
-}
-#functional {
-        width: 60%;
-        background: #d1d1cd;
+#logo, #functional, #feedback, #follow {
+  width: 50%;
 }
 #location, #sidebar {
-        width: 25%;
-        text-align:center;
+  width: 25%;
 }
 
-<!-- Begin Menu CSS-->
+#menu, #main, #breadcrumbs, #footer {
+	width: 70%;
+}
+
+/* Colors */
+body {
+	background: #f5e49D;
+}
+a {
+  color: #4B0B2F;
+  text-decoration: none;
+}
+a:hover {
+	text-decoration: underline;
+}
+h1, h2, h3, h4, h5, h6 {
+  color: #3C3932;
+}
 #menu {
-        width: 75%;
-        background: #BE403F;
-        font-size:150%;
+	background: #7D124E;
 }
-
+#main, #news, #events {
+	background-color: #FFF;
+	border: 1px solid #52615D;
+}
+#sidebar h2 {
+	background: #EADF59;
+}
+/* Typography */
+body {
+	font: normal 13px/18px Helvetica, Arial, sans-serif;
+}
+h1 { text-transform: uppercase; }
+/* Logo Layout */
+#logo h1 { 
+	margin: 0;
+	padding: 0.5em;
+}
+/* Functional Links Layout */
+#functional p {
+	display: inline;
+	float: right;
+}
+/* Location and Navigation Layout */
+#location, #menu {
+	text-align: center;
+}
+#menu {
+	margin-top: 24px;
+}
 #menu li{display: inline}
-
-
+#menu ul {margin: 0; padding: 0; }
+#menu a {
+	display: block;
+	float: left;
+	padding: 1em;
+	font-size: 14px;
+	font-weight: bold;
+}
 #menu a:link, #menu a:visited {
-  padding: 0.4em 1em 0.4em 1em;
   color: white;
   text-decoration: none;
- 
+}
+#menu a:hover {background-color:#4B0B2F;
+}
+#how #menu li.how a:link {color:#D7C162;}
+#find #menu li.find a:link {color:#D7C162;}
+#youth #menu li.youth a:link {color:#D7C162;}
+#city #menu li.city a:link {color:#D7C162;}
+#about #menu li.about a:link {color:#D7C162;}
+#how #menu li.how a:visited {color:#D7C162;}
+#find #menu li.find a:visited {color:#D7C162;}
+#youth #menu li.youth a:visited {color:#D7C162;}
+#city #menu li.city a:visited {color:#D7C162;}
+#about #menu li.about a:visited {color:#D7C162;}
+/* Breadcrumbs Layout */
+#breadcrumbs ul {
+	margin: 0;
+	padding: 0.5em 0 0.5em 0; 
+}
+#breadcrumbs li {
+	list-style-type: none;
+	display: inline;
+}
+/* Sidebar Layout */
+#sidebar h2 {
+	margin: 0;
+	padding: 0.5em;
+	text-align: center;
+}
+#sidebar ul {
+	margin: 0; 
+	padding: 0 1em 0 1em;
+}
+#sidebar li {
+	list-style-type: none;
+	margin: 0;
+}
+#sidebar li h3, #sidebar li p {
+	margin: 0;
+}
+#sidebar li p.time {
+	margin-bottom: 1em;
+	font-style: italic;
+}
+#events, #news {
+	margin: 0 2em 2em 2em;
+}
+/* Main Content Layout */
+.content {
+	padding: 2em;
+}
+.right {
+	float: right;
+}
+#main p {
+	float: left;
 }
 
-#menu a:hover{background-color:#852223;}
-
-
-#how #menu li.how a:link {color:white}
-#find #menu li.find a:link {color:white}
-#youth #menu li.youth a:link {color:white}
-#city #menu li.city a:link {color:white}
-#about #menu li.about a:link {color:white}
-
-#how #menu li.how a:visited {color:white}
-#find #menu li.find a:visited {color:white}
-#youth #menu li.youth a:visited {color:white}
-#city #menu li.city a:visited {color:white}
-#about #menu li.about a:visited {color:white}
-
-<!--End Menu CSS-->
-
-#news, #events {
-        background: #EADF59;
-        width: 100%;
-}
-#main {
-        width: 75%;
-}
-#breadcrumbs {
-        width: 100%;
-}
-#content {
-        width: 100%;
-        background: #e7eae2;
-}
-
+/* Footer Layout */
