--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
 body {
 	margin: 0;
 }
+#page {
+  min-width: 900px;
+}
 div { 
   float: left;
 }
@@ -30,13 +33,13 @@ body {
 }
 a {
   color: #4B0B2F;
-  text-decoration: none;
 }
 a:hover {
 	text-decoration: underline;
 }
 #logo h1 a {
   color: #852223;
+  text-decoration: none;
 }
 h1, h2, h3, h4, h5, h6 {
   color: #3C3932;
@@ -66,6 +69,9 @@ h1, h2, h3, h4, h5, h6 {
 	background-color: #FFF;
 	border: 1px solid #52615D;
 }
+#logo img {
+  border:none;
+}
 #sidebar h2 {
 	background: #EADF59;
 }
@@ -75,7 +81,9 @@ body {
 }
 h2, h3, h4, h5, h6 {
 	margin-bottom: 0;
-	font-weight: normal
+}
+#sidebar h2, #sidebar h3 {
+  font-weight: normal;
 }
 h1 { 
 	text-transform: uppercase; 
@@ -86,13 +94,13 @@ h2 {
 	font-size: 18px;
 }
 h3 {
-	font-size: 16px;
-}
-h4 {
 	font-size: 14px;
 }
-h5 {
+h4 {
 	font-size: 13px;
+}
+h5 {
+	font-size: 11px;
 	text-transform: uppercase;
 }
 p {
