--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,8 @@ p.time {
 	padding-left: 1.5em;
 }
 #footer p {
-	margin: 0;
+	margin-right: 1em;
+	display: inline;
 }
 #facebook a {
 	background: url("../images/facebook_16.png") no-repeat top left;
