add meeting rooms page

--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ p.time {
 }
 /* Main Content Layout */
 #content {
-	padding: 0 2em 2em 2em;
+	padding: 2em;
 }
 #content img {
 	margin: 0 2em 2em 2em;
