--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ p {
 }
 /* Breadcrumbs Layout */
 #breadcrumbs ul {
-	margin: 0;
+	margin: 2em 0 0 0;
 	padding: 0.5em 0 0.5em 0; 
 }
 #breadcrumbs li {
