--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,9 @@ p.time {
 .clear {
   clear:both;
 }
+.clear-left {
+  clear:left;
+}
 /* Aside Layout */
 .aside {
   width: 200px;
@@ -324,7 +327,6 @@ p.time {
 }
 /* Catalog Quick Search Layout */
 #catalog {
-  width: 60%;
   float: left;
   padding: 1em 0 3em 0 ;
   margin: 1em 0 1em 0;
